assets/sass/main.scss
@import '../../node_modules/reset-css/sass/reset';
@import 'global';
@import './partials/animations';
@import './partials/typography';
@import './partials/elements';

@import url("https://use.typekit.net/bra5dez.css");
@import url('https://fonts.googleapis.com/css?family=Open+Sans:700');

* {
  box-sizing: border-box;
}

body {
  overflow-x: hidden;
}

::-moz-selection { background: $accent; color: #fff }
::selection { background: $accent; color: #fff }

.page-section {
  @include row();
  padding: 2em gutter() 3em gutter();

  @include bp($m) {
    padding: 2em gutter() 4em gutter();
  }

  &.tac {text-align: center;}

  &.decorative-bg {
    position: relative;
    perspective: 400px;
    z-index: -1;

    &:before,
    &:after {
      content: '';
      display: none;
      position: absolute;

      @include bp($m) {
        display: block;
      }
    }

    &:before {
      width: 120vw;
      height: 40vh;
      background: linear-gradient(to left, rgba(#fff, 0) 0%, #f5f5f5 100%);
      left: -50vw;
      top: 33%;
      z-index: -1;
      transform: rotate(10deg);
    }
    &:after {
      width: 120vw;
      height: 40vh;
      background: linear-gradient(to right, rgba(#fff, 0) 0%, #f5f5f5 100%);
      right: -50vw;
      top: 15%;
      z-index: -1;
      transform: rotate(10deg);
    }
  }

  & + .page-section {
    border-top: 1px solid #eee;
    padding-top: 2em;

    @include bp($m) {
      padding-top: 4em;
    }
  }

  .wysiwyg-block {
    max-width: 650px;
    margin: 0 auto;
    margin-bottom: 2em;
  }
}

.section-title {
  text-align: center;
  font-weight: bold;
  margin-top: 1em;
  margin-bottom: 2em;

  &.small-margin {
    margin-bottom: 1em;
  }
}

.accent {
  color: $accent-d;
}

